# xitca-web

./: .gitignore  CHANGES.md  CODE_OF_CONDUCT.md  Cargo.toml  README.md
actix-http-alt/: Cargo.toml
actix-http-alt/src/: body.rs  builder.rs  config.rs  error.rs  expect.rs  flow.rs  lib.rs  protocol.rs  request.rs  response.rs  service.rs  stream.rs  upgrade.rs
actix-server-alt/: Cargo.toml
actix-server-alt/src/: builder.rs  lib.rs  signals.rs
actix-tls-alt/: Cargo.toml
actix-tls-alt/src/: lib.rs
actix-web-alt/: Cargo.toml
actix-web-alt/src/: app.rs  guard.rs  lib.rs  request.rs  response.rs  server.rs
client/: Cargo.toml  README.md
client/src/: body.rs  builder.rs  client.rs  connect.rs  connection.rs  date.rs  error.rs  grpc.rs  http_tunnel.rs  lib.rs  multipart.rs  pool.rs  request.rs  resolver.rs  response.rs  service.rs  timeout.rs  tunnel.rs  upgrade.rs  uri.rs  ws.rs
codegen/: CHANGES.md  Cargo.toml  README.md
codegen/src/: error.rs  lib.rs  route.rs  service.rs  state.rs
examples/: Cargo.toml  README.md  bench.rs  cloudflare-worker.rs  compression.rs  content-encoding.rs  grpc.rs  h2.rs  h3.rs  hello-world.rs  hello_world.rs  io-uring.rs  multi-services.rs  multipart.rs  route.rs  tower-http.rs  unix.rs  websocket.rs
examples/auth/: .env.example  Cargo.toml  README.md
examples/cert/: README.md
examples/cloudflare-worker/: Cargo.toml  README.md  package.json  wrangler.toml
examples/compression/: Cargo.toml
examples/cookie/: Cargo.toml
examples/dependency-injection/: Cargo.toml
examples/error-handle/: Cargo.toml
examples/examples/: bench.rs  h2.rs  h3.rs  hello-world.rs  hello_world.rs
examples/file/: Cargo.toml
examples/files/: index.html
examples/grpc/: Cargo.toml  build.rs
examples/hello-world/: Cargo.toml
examples/io-uring/: Cargo.toml
examples/io-uring-h2/: Cargo.toml
examples/macros/: Cargo.toml
examples/multi-http-services/: Cargo.toml
examples/multipart/: Cargo.toml
examples/protobuf/: helloworld.proto
examples/streaming/: Cargo.toml
examples/sync/: Cargo.toml
examples/tower-http/: Cargo.toml
examples/unix/: Cargo.toml
examples/wasi/: Cargo.toml  README.md
examples/websocket/: Cargo.toml
files/: Cargo.toml  README.md
files/src/: cache.rs  chunked.rs  directory.rs  error.rs  files.rs  lib.rs  named.rs  path_buf.rs
http/: CHANGES.md  Cargo.toml  README.md
http-body/: Cargo.toml  README.md
http-body/src/: body.rs  body_ext.rs  frame.rs  lib.rs  size_hint.rs  stream_impl.rs  util.rs
http-encoding/: CHANGES.md  Cargo.toml  README.md
http-encoding/src/: brotli.rs  coder.rs  coding.rs  decode.rs  decoder.rs  deflate.rs  encode.rs  encoder.rs  error.rs  gzip.rs  lib.rs  writer.rs
http-file/: CHANGES.md  Cargo.toml  README.md
http-file/src/: buf.rs  chunk.rs  date.rs  error.rs  lib.rs  runtime.rs
http-grpc/: CHANGES.md  Cargo.toml  README.md
http-grpc/src/: codec.rs  error.rs  lib.rs  status.rs  stream.rs
http-multipart/: CHANGES.md  Cargo.toml  README.md
http-multipart/src/: content_disposition.rs  error.rs  field.rs  form.rs  header.rs  lib.rs
http-ws/: CHANGES.md  Cargo.toml  README.md
http-ws/src/: codec.rs  error.rs  frame.rs  lib.rs  mask.rs  proto.rs  stream.rs
http/benches/: h1_decode.rs  h2_hpack.rs
http/src/: body.rs  builder.rs  config.rs  date.rs  error.rs  expect.rs  flow.rs  http.rs  lib.rs  request.rs  response.rs  service.rs  version.rs
io/: CHANGES.md  Cargo.toml  README.md
io/src/: bytes.rs  h3.rs  io.rs  io_uring.rs  lib.rs  net.rs
postgres/: CHANGES.md  Cargo.toml  README.md
postgres-codegen/: Cargo.toml  README.md
postgres-codegen/src/: lib.rs
postgres/benches/: fortune.rs
postgres/examples/: execute.rs  macro.rs  pooling.rs  sync.rs
postgres/samples/: test.sql
postgres/src/: auth.rs  authentication.rs  cancel.rs  client.rs  column.rs  config.rs  connect.rs  context.rs  copy.rs  driver.rs  error.rs  execute.rs  from_sql.rs  futures.rs  io.rs  iter.rs  lib.rs  message.rs  pipeline.rs  pool.rs  portal.rs  prepare.rs  protocol.rs  proxy.rs  query.rs  query_simple.rs  queue.rs  request.rs  response.rs  row.rs  session.rs  statement.rs  transaction.rs  transport.rs
postgres/tests/: runtime.rs  statement.rs  sync.rs
reverse-proxy/: Cargo.toml
reverse-proxy/examples/: http_proxy.rs
reverse-proxy/src/: error.rs  lib.rs  peer.rs  peer_resolver.rs  proxy.rs  service.rs
router/: CHANGES.md  Cargo.toml  README.md
router/benches/: bench.rs
router/fuzz/: Cargo.toml
router/src/: error.rs  escape.rs  lib.rs  params.rs  router.rs  tree.rs
router/tests/: insert.rs  match.rs  merge.rs  remove.rs  tree.rs
server/: CHANGES.md  Cargo.toml  README.md
server/src/: builder.rs  lib.rs  signals.rs
service/: CHANGES.md  Cargo.toml  README.md
service/src/: async_closure.rs  lib.rs  object.rs  shutdown.rs
test/: Cargo.toml  build.rs
test/src/: lib.rs
test/tests/: grpc.rs  h1.rs  h2.rs  h2_rst.rs  h2_v2.rs  h2spec.rs  h3.rs  macro.rs  websocket.rs
tls/: CHANGES.md  Cargo.toml  README.md
tls/src/: bridge.rs  lib.rs  native_tls.rs  native_tls_complete.rs  openssl.rs  openssl_complete.rs  openssl_poll.rs  openssl_uring.rs  rustls.rs  rustls_complete.rs  rustls_poll.rs  rustls_uring.rs
tokio-uring/: CHANGELOG.md  Cargo.toml  README.md
tokio-uring/examples/: cat.rs  mix.rs  tcp_listener.rs  tcp_listener_fixed_buffers.rs  tcp_stream.rs  test_create_dir_all.rs  udp_socket.rs  unix_listener.rs  unix_stream.rs  wrk-bench.rs
tokio-uring/src/: lib.rs
tokio-uring/tests/: buf.rs  driver.rs  fixed_buf.rs  fs_directory.rs  fs_file.rs  fs_symlink.rs  runtime.rs
unsafe_collection/: CHANGES.md  Cargo.toml  README.md
unsafe_collection/src/: array_queue.rs  fake.rs  fake_send_sync.rs  futures.rs  lib.rs  list.rs  mpsc.rs  no_hash.rs  no_send_send.rs  small_str.rs  spsc.rs  uninit.rs  waker.rs
web/: CHANGES.md  Cargo.toml  README.md
web/src/: body.rs  context.rs  error.rs  lib.rs  request.rs  response.rs  server.rs  stream.rs  test.rs
xitca-client/: Cargo.toml  README.md
xitca-client/src/: body.rs  client.rs  (+13 more)
xitca-http/: Cargo.toml
(+698 files in other folders)
