[workspace]
resolver = "2"
members = [
    "client",
    "codegen",
    "http",
    "io",
    "postgres",
    "postgres-codegen",
    "router",
    "server",
    "service",
    "test",
    "tls",
    "unsafe_collection",
    "web",
    "http-encoding",
    "http-file",
    "http-multipart",
    "http-rate",
    "http-ws",
    "tokio-uring"
]

[workspace.package]
rust-version = "1.85"

[patch.crates-io]
xitca-client = { path = "./client" }
xitca-codegen = { path = "./codegen" }
xitca-http = { path = "./http" }
xitca-io = { path = "./io" }
xitca-postgres = { path = "./postgres" }
xitca-postgres-codegen = { path = "./postgres-codegen" }
xitca-router = { path = "./router" }
xitca-server = { path = "./server" }
xitca-service = { path = "./service" }
xitca-tls = { path = "./tls" }
xitca-unsafe-collection = { path = "./unsafe_collection" }
xitca-web = { path = "./web" }
http-encoding = { path = "./http-encoding" }
http-file = { path = "http-file" }
http-multipart = { path = "./http-multipart" }
http-rate = { path = "./http-rate" }
http-ws = { path = "./http-ws" }

tokio-uring-xitca = { path = "./tokio-uring" }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

# disable useless and/or broken lints
[workspace.lints.rust]
unreachable_patterns = "allow"

[workspace.lints.clippy]
await_holding_lock = "allow"
needless_return = "allow"
new_without_default = "allow"
