[workspace]
resolver = "2"
members = [
    "client",
    "codegen",
    "http",
    "io",
    "postgres",
    "postgres-codegen",
    "router",
    "server",
    "service",
    "test",
    "tls",
    "unsafe_collection",
    "web",
    "http-body",
    "http-encoding",
    "http-file",
    "http-multipart",
    "http-rate",
    "http-grpc",
    "http-ws",
    "tokio-uring"
]

[workspace.package]
rust-version = "1.85"

[patch.crates-io]
xitca-client = { path = "./client" }
xitca-codegen = { path = "./codegen" }
xitca-http = { path = "./http" }
xitca-io = { path = "./io" }
xitca-postgres = { path = "./postgres" }
xitca-postgres-codegen = { path = "./postgres-codegen" }
xitca-router = { path = "./router" }
xitca-server = { path = "./server" }
xitca-service = { path = "./service" }
xitca-tls = { path = "./tls" }
xitca-unsafe-collection = { path = "./unsafe_collection" }
xitca-web = { path = "./web" }
http-body-alt = { path = "./http-body" }
http-grpc-rs = { path = "./http-grpc" }
http-encoding = { path = "./http-encoding" }
http-file = { path = "http-file" }
http-multipart = { path = "./http-multipart" }
http-rate = { path = "./http-rate" }
http-ws = { path = "./http-ws" }

tokio-uring-xitca = { path = "./tokio-uring" }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

# disable useless and/or broken lints
[workspace.lints.rust]
unreachable_patterns = "allow"

[workspace.lints.clippy]
await_holding_lock = "allow"
needless_return = "allow"
new_without_default = "allow"

[workspace.dependencies]
bytes = "1.11.1"
futures-core = { version = "0.3.32", default-features = false }
http = "1.4.0"
httparse = "1.10.1"
http-body-alt = "0.1.0"
http-encoding = "0.3.0"
http-file = { version = "0.3.0", default-features = false }
http-grpc-rs = "0.1.0"
http-multipart = "0.1.2"
http-ws = "0.4"
percent-encoding = "2.3.2"
pin-project-lite = "0.2.17"
prost = { version = "0.14.3", default-features = false }
serde_core = "1"
serde = "1"
socket2 = "0.6.3"
tokio = "1.51.0"
tokio-uring-xitca = "0.2.0"

xitca-io = "0.6.0"
xitca-http = { version = "0.9.2", default-features = false }
xitca-router = "0.4.3"
xitca-server = "0.7.0"
xitca-service = "0.3.0"
xitca-tls = "0.6.0"
xitca-unsafe-collection = "0.2.0"
xitca-web = "0.8.1"
