[package]
name = "actix-tls-alt"
version = "0.1.0"
edition = "2018"

[features]
openssl = ["tokio-openssl", "openssl-crate"]
rustls = ["tokio-rustls"]

[dependencies]
actix-server-alt = "0.1"
actix-service-alt = "0.1"
bytes = "1"
futures-task = "0.3"
pin-project-lite = "0.2.6"
tokio = "1.6"

# openssl feature
openssl-crate = { package = "openssl", version = "0.10", optional = true }
tokio-openssl = { version = "0.6.1", optional = true }

# rustls support
tokio-rustls = { version = "0.22", optional = true }