[package]
name = "actix-web-alt"
version = "0.1.0"
edition = "2018"

[features]
default = []
http2 = ["actix-http-alt/http2"]
http3 = ["actix-http-alt/http3", "actix-server-alt/http3"]
openssl = ["actix-http-alt/openssl", "openssl-crate"]
rustls = ["actix-http-alt/rustls", "rustls-crate"]

[dependencies]
actix-http-alt = { version = "0.1", default-features = false }
actix-server-alt = { version = "0.1" }
actix-service-alt = "0.1"

bytes = "1"
futures-core = "0.3"
log = "0.4"

# openssl feature
openssl-crate = { package = "openssl", version = "0.10", optional = true }

# rustls feature
rustls-crate = { package = "rustls", version = "0.19", optional = true }

[dev-dependencies]
tokio = { version = "1.6", features = ["rt", "macros"] }