[package]
name = "xitca-client"
version = "0.1.0"
edition = "2021"

[features]
default = ["http1"]
http1 = ["httparse", "xitca-http/http1"]
http2 = ["h2", "itoa", "xitca-http/http2"]
http3 = ["h3", "h3-quinn", "quinn/tls-rustls", "itoa", "async-stream", "rustls_0dot21", "webpki_roots_0dot25"]
openssl = ["openssl-crate", "tokio-openssl"]
rustls = ["tokio-rustls", "webpki-roots"]
compress = ["http-encoding"]
json = ["serde", "serde_json"]
websocket = ["http-ws", "futures-sink"]

# used to test niche client side usage and correctness of server implemenation:
# - http/2 clear text over plain tcp connection
# - http/3 connection to server with self signed certificates.
dangerous = ["rustls_0dot21/dangerous_configuration"]

[dependencies]
xitca-http = { version = "0.2", default-features = false, features = ["runtime"] }
xitca-unsafe-collection = "0.1"

futures-core = { version = "0.3.17", default-features = false }
pin-project-lite = "0.2.9"
tokio = { version = "1.30", features = ["sync", "time"] }
tracing = { version = "0.1.40", default-features = false }

# http/1 support
httparse = { version = "1.8.0", optional = true }

# http/2 support
h2 = { version = "0.4", optional = true }

# http/3 support
h3 = { version = "0.0.4", optional = true }
h3-quinn = { version = "0.0.5", optional = true }
quinn = { version = "0.10", optional = true }
async-stream = { version = "0.3", optional = true }

# http/2 and http/3 shared
itoa = { version = "1", optional = true }

# openssl support
openssl-crate = { package = "openssl", version = "0.10", optional = true }
tokio-openssl = { version = "0.6.3", optional = true }

# rustls, http3 and dangerous features shared support
tokio-rustls = { version = "0.25", optional = true }
webpki-roots = { version = "0.26", optional = true }
rustls-pki-types = "1"

# http3 temporary exclusive
rustls_0dot21 = { package = "rustls", version = "0.21", optional = true }
webpki_roots_0dot25 = { package = "webpki-roots", version = "0.25", optional = true }

# compression support
http-encoding = { version = "0.2", features = ["br", "gz", "de"], optional = true }

# serde support
serde = { version = "1.0.130", default-features = false, optional = true }

# json support
serde_json = { version = "1", optional = true }

# websocket support
futures-sink = { version = "0.3.17", default-features = false, optional = true }
http-ws = { version = "0.2", features = ["stream"], optional = true }

[dev-dependencies]
futures = "0.3"
tokio = { version = "1.30", features = ["macros", "rt-multi-thread"] }
xitca-client = { version = "0.1", features = ["rustls"] }
