[package]
name = "xitca-client"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[features]
# default feature includes http/1 clear text client
default = ["http1"]
# http/1 clear text client
http1 = ["httparse", "xitca-http/http1"]
# http/2 client(tls enabled by default. see `dangerous` feature for clear text http/2)
http2 = ["h2", "itoa", "xitca-http/http2"]
# http/3 client(tls always enabled with rustls)
http3 = ["h3", "h3-quinn", "quinn", "itoa", "async-stream", "rustls-ring-crypto"]
# openssl as http/1 and http/2 tls handler
openssl = ["xitca-tls/openssl"]
# rustls as http/1 and http/2 tls handler
rustls = ["xitca-tls/rustls", "webpki-roots"]
# rustls as tls handler with ring as crypto provider
rustls-ring-crypto =  ["xitca-tls/rustls-ring-crypto", "webpki-roots"]
# compression and decompression middleware support
compress = ["http-encoding"]
# json response body parsing support
json = ["serde", "serde_json"]
# websocket support. must be used together with http/1 and/or http/2 feature(s)
websocket = ["http-ws"]
# feature for trusted local network:
# - http/2 clear text over plain tcp connection
# - allow invalid certificates for client in http/1, http/2 and/or http/3
dangerous = []

[dependencies]
xitca-http = { version = "0.7.0", default-features = false, features = ["runtime"] }
xitca-io = "0.4.0"
xitca-unsafe-collection = "0.2.0"

futures-core = { version = "0.3.17", default-features = false }
futures-sink = { version = "0.3.17", default-features = false }
pin-project-lite = "0.2.9"
tokio = { version = "1.30", features = ["sync", "time"] }
tracing = { version = "0.1.40", default-features = false }

# http/1
httparse = { version = "1.8.0", optional = true }

# http/2
h2 = { version = "0.4", optional = true }

# http/3
h3 = { version = "0.0.7", optional = true }
h3-quinn = { version = "0.0.9", optional = true }
quinn = { version = "0.11", features = ["ring"], optional = true }
async-stream = { version = "0.3", optional = true }

# http/2 and http/3 shared
itoa = { version = "1", optional = true }

# tls shared
xitca-tls = { version = "0.4.0", optional = true }

# rustls, http3 and dangerous features shared
webpki-roots = { version = "0.26", optional = true }

# compression
http-encoding = { version = "0.2", features = ["br", "gz", "de"], optional = true }

# serde
serde = { version = "1.0.130", default-features = false, optional = true }

# json
serde_json = { version = "1", optional = true }

# websocket
http-ws = { version = "0.4", features = ["stream"], optional = true }

[dev-dependencies]
futures = "0.3"
tokio = { version = "1.30", features = ["macros", "rt-multi-thread"] }
