[package]
name = "xitca-client"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

[lints]
workspace = true

[features]
# default feature includes http/1 clear text client
default = ["http1"]
# http/1 clear text client
http1 = ["httparse", "xitca-http/http1"]
# http/2 client(tls enabled by default. see `dangerous` feature for clear text http/2)
http2 = ["h2", "itoa", "xitca-http/http2"]
# http/3 client(tls always enabled with rustls)
http3 = ["h3", "h3-quinn", "quinn", "itoa", "async-stream", "rustls-ring-crypto"]
# openssl as http/1 and http/2 tls handler
openssl = ["xitca-tls/openssl-poll"]
# rustls as http/1 and http/2 tls handler
rustls = ["xitca-tls/rustls-poll-aws-crypto", "webpki-roots"]
# rustls as tls handler with ring as crypto provider
rustls-ring-crypto =  ["xitca-tls/rustls-poll-ring-crypto", "webpki-roots"]
# compression and decompression middleware support
compress = ["dep:http-encoding"]
# json response body parsing support
json = ["serde", "serde_json"]
# websocket support. must be used together with http/1 and/or http/2 feature(s)
websocket = ["http-ws"]
# grpc support
grpc = ["compress", "dep:http-grpc", "dep:prost", "http-grpc/compress-gz", "http-grpc/compress-br", "http-grpc/compress-de", "http-grpc/compress-zs"]
# feature for trusted local network:
# - http/2 clear text over plain tcp connection
# - http/3 connection to server with self signed certificates
# mulipart support
multipart = ["dep:http-multipart"]
dangerous = []

[dependencies]
xitca-http = { workspace = true, default-features = false, features = ["runtime"] }
xitca-io = { workspace = true }
xitca-unsafe-collection = { workspace = true }

futures-core = { workspace = true, default-features = false }
futures-sink = { version = "0.3.17", default-features = false }
pin-project-lite = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
tracing = { version = "0.1.40", default-features = false }

# http/1
httparse = { workspace = true, optional = true }

# http/2
h2 = { version = "0.4", optional = true }

# http/3
h3 = { version = "0.0.8", optional = true }
h3-quinn = { version = "0.0.10", optional = true }
quinn = { version = "0.11", features = ["ring"], optional = true }
async-stream = { version = "0.3", optional = true }

# http/2 and http/3 shared
itoa = { version = "1", optional = true }

# tls shared
xitca-tls = { workspace = true, optional = true }

# rustls, http3 and dangerous features shared
webpki-roots = { version = "1", optional = true }

# compression
http-encoding = { workspace = true, features = ["all"], optional = true }

# serde
serde = { version = "1.0.130", default-features = false, optional = true }

# json
serde_json = { version = "1", optional = true }

# grpc
http-grpc = { version = "0.1", optional = true }
prost = { version = "0.14", optional =true }

# websocket
http-ws = { workspace = true, features = ["stream"], optional = true }

# multipart
http-multipart = { version = "0.1.2", optional = true }

[dev-dependencies]
futures = "0.3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
