[package]
name = "xitca-codegen"
version = "0.4.0"
edition = "2024"
license = "Apache-2.0"
description = "proc macro for xitca"
repository = "https://github.com/HFQR/xitca-web"
keywords = ["xitca", "xitca-web"]
authors = ["fakeshadow <everestshadow@gmail.com>"]
readme= "README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1.0"
