[workspace]
resolver = "2"
members = [
    "auth",
    "cloudflare-worker",
    "compression",
    "cookie",
    "dependency-injection",
    "error-handle",
    "file",
    "grpc",
    "hello-world",
    "io-uring",
    "io-uring-h2",
    "macros",
    "multipart",
    "multi-http-services",
    "streaming",
    "sync",
    "tower-http",
    "unix",
    "wasi",
    "websocket"
]

[profile.dev]
debug-assertions = false

[patch.crates-io]
tokio-uring-xitca = { path = "../tokio-uring" }
xitca-tls= { path = "../tls" }
xitca-io= { path = "../io" }
xitca-server = { path = "../server" }
xitca-http = { path = "../http" }
http-body-alt = { path = "../http-body" }
