[workspace]
resolver = "2"
members = [
    "auth",
    "compression",
    "cookie",
    "dependency-injection",
    "error-handle",
    "file",
    "grpc",
    "hello-world",
    "io-uring",
    "io-uring-h2",
    "macros",
    "multipart",
    "multi-http-services",
    "streaming",
    "sync",
    "tower-http",
    "unix",
    "wasi",
    "websocket"
]

[profile.dev]
debug-assertions = false

[workspace.dependencies]
xitca-http = "0.9.0"
xitca-postgres = "0.4.0"
xitca-server = "0.7.0"
xitca-service = "0.3.0"
xitca-web = "0.8.0"
