[package]
name = "http-file"
version = "0.1.0"
edition = "2021"

[features]
default = ["tokio"]
# tokio runtime as async file system
tokio = ["tokio/fs", "tokio/io-util"]
# tokio-uring as async file system. (can be used together with tokio feature)
tokio-uring = ["dep:tokio", "dep:tokio-uring"]

[dependencies]
bytes = "1.3.0"
http = "0.2.8"
httpdate = "1.0.2"
http-range-header = "0.3.0"
futures-core = { version = "0.3.25", default-features = false }
mime_guess = "2.0.4"
percent-encoding = "2.2.0"
pin-project-lite = "0.2.9"

tokio = { version = "1.23.0", features = ["rt"], optional = true }
tokio-uring = { version = "0.4", features = ["bytes"], optional = true }

[dev-dependencies]
futures = { version = "0.3", default-features = false }
tokio = { version = "1.23.0", features = ["macros", "rt"] }
