[package]
name = "http-file"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "file serving for http crate type"
repository = "https://github.com/HFQR/xitca-web"
keywords = ["http", "file"]
authors = ["fakeshadow <everestshadow@gmail.com>"]
readme= "README.md"

[lints]
workspace = true

[features]
default = ["tokio"]
# tokio runtime as async file system
tokio = ["tokio/fs", "tokio/io-util"]
# tokio-uring as async file system. (can be used together with tokio feature)
tokio-uring = ["dep:tokio", "dep:tokio-uring"]

[dependencies]
bytes = "1.4"
http = "1"
httpdate = "1.0.2"
http-range-header = "0.4"
futures-core = { version = "0.3.25", default-features = false }
mime_guess = "2.0.4"
percent-encoding = "2.2.0"
pin-project-lite = "0.2.9"

tokio = { version = "1.30", features = ["rt"], optional = true }
tokio-uring = { version = "0.5", features = ["bytes"], optional = true }

[dev-dependencies]
futures = { version = "0.3", default-features = false }
tokio = { version = "1.30", features = ["macros", "rt"] }
