[package]
name = "http-file"
version = "0.3.0"
edition = "2024"
license = "Apache-2.0"
description = "file serving for http crate type"
repository = "https://github.com/HFQR/xitca-web"
keywords = ["http", "file"]
authors = ["fakeshadow <everestshadow@gmail.com>"]
readme= "README.md"
rust-version.workspace = true

[lints]
workspace = true

[features]
default = ["tokio"]
# tokio runtime as async file system
tokio = ["tokio/fs", "tokio/io-util"]
# xitca's fork of tokio-uring as file system. (can be used together with tokio feature)
tokio-uring-xitca = ["dep:tokio", "dep:tokio-uring-xitca"]

[dependencies]
bytes = { workspace = true }
http = { workspace = true }
httpdate = "1.0.2"
http-range-header = "0.4"
futures-core = { version = "0.3.25", default-features = false }
mime_guess = "2.0.4"
percent-encoding = "2.2.0"
pin-project-lite = { workspace = true }

tokio = { workspace = true, features = ["rt"], optional = true }
tokio-uring-xitca = { workspace = true, features = ["bytes", "runtime-uring"], optional = true }

[dev-dependencies]
futures = { version = "0.3", default-features = false }
tempfile = "3.2.0"
tokio = { workspace = true, features = ["macros", "rt"] }
