[package]
name = "http-multipart"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.1.0"
futures-core = "0.3.21"
http = "0.2.8"
httparse = "1.7.1"
mime = "0.3.16"
memchr = "2.5.0"
pin-project-lite = "0.2.9"

[dev-dependencies]
futures-util = { version = "0.3.21", default-features = false }
