[package]
name = "http-multipart"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "multipart for http crate type"
repository = "https://github.com/HFQR/xitca-web"
keywords = ["http", "multipart"]
authors = ["fakeshadow <everestshadow@gmail.com>"]
readme= "README.md"

[dependencies]
bytes = "1.4"
futures-core = "0.3.21"
http = "1"
httparse = "1.8"
mime = "0.3.16"
memchr = "2.5.0"
pin-project-lite = "0.2.9"

[dev-dependencies]
futures-util = { version = "0.3.21", default-features = false }
