[package]
name = "http-multipart"
version = "0.1.2"
edition = "2021"
license = "Apache-2.0"
description = "multipart for http crate type"
repository = "https://github.com/HFQR/xitca-web"
keywords = ["http", "multipart"]
authors = ["fakeshadow <everestshadow@gmail.com>"]
readme= "README.md"

[dependencies]
bytes = { workspace = true }
futures-core = "0.3.21"
http = { workspace = true }
httparse = "1.8"
memchr = "2.5.0"
pin-project-lite = { workspace = true }

[dev-dependencies]
futures-util = { version = "0.3.21", default-features = false }
