[package]
name = "http-ws"
version = "0.1.0"
edition = "2021"

[features]
default = ["stream"]
stream = ["pin-project-lite", "tokio/sync"]

[dependencies]
base64 = { version = "0.21.0", default-features = false }
bytes = "1.3.0"
futures-core = { version = "0.3.25", default-features = false }
http = "0.2.8"
rand = { version = "0.8.5" }
sha-1 = "0.10"
tracing = { version = "0.1.26", default-features = false }

# stream feature
pin-project-lite = { version = "0.2.9", optional = true }
tokio = { version = "1.23.0", optional = true }

[dev-dependencies]
tokio = { version = "1.23.0", features = ["rt"] }
futures-util = { version = "0.3.25", default-features = false }
