[package]
name = "http-ws"
version = "0.4.0"
edition = "2021"
license = "Apache-2.0"
description = "websocket for http crate type"
repository = "https://github.com/HFQR/xitca-web"
keywords = ["http", "websocket"]
authors = ["fakeshadow <everestshadow@gmail.com>"]
readme= "README.md"

[lints]
workspace = true

[features]
default = []
stream = ["pin-project-lite", "tokio/sync"]

[dependencies]
base64 = { version = "0.22.0", default-features = false }
bytes = "1.4"
futures-core = { version = "0.3.25", default-features = false }
http = "1"
rand = { version = "0.9.0" }
sha1 = "0.10"
tracing = { version = "0.1.40", default-features = false }

# stream feature
pin-project-lite = { version = "0.2.9", optional = true }
tokio = { version = "1.35", optional = true }

[dev-dependencies]
tokio = { version = "1.35", features = ["io-util", "net", "rt", "time"] }
futures-util = { version = "0.3.25", default-features = false }

[package.metadata.docs.rs]
all-features = true
