[package]
name = "http-ws"
version = "0.4.0"
edition = "2021"
license = "Apache-2.0"
description = "websocket for http crate type"
repository = "https://github.com/HFQR/xitca-web"
keywords = ["http", "websocket"]
authors = ["fakeshadow <everestshadow@gmail.com>"]
readme= "README.md"

[lints]
workspace = true

[features]
default = []
stream = ["pin-project-lite", "tokio/sync"]

[dependencies]
base64 = { version = "0.22.0", default-features = false }
bytes = { workspace = true }
futures-core = { workspace = true, default-features = false }
http = { workspace = true }
rand = { version = "0.10.0" }
sha1 = "0.11.0"
tracing = { version = "0.1.40", default-features = false }

# stream feature
pin-project-lite = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["io-util", "net", "rt", "time"] }
futures-util = { version = "0.3.25", default-features = false }

[package.metadata.docs.rs]
all-features = true
