[package]
name = "xitca-http"
version = "0.9.0"
edition = "2024"
license = "Apache-2.0"
description = "http library for xitca"
repository = "https://github.com/HFQR/xitca-web"
keywords = ["xitca", "xitca-web"]
authors = ["fakeshadow <everestshadow@gmail.com>"]
readme= "README.md"
rust-version.workspace = true

[lints]
workspace = true

[features]
# default include only http1.
default = ["http1"]
# http1 specific feature.
http1 = ["httparse", "itoa", "runtime"]
# http2 specific feature.
http2 = ["fnv", "futures-util/alloc", "runtime"]
# http3 specific feature.
http3 = ["xitca-io/quic", "futures-util/alloc", "h3", "h3-quinn", "runtime"]
# openssl as server side tls.
openssl = ["xitca-tls/openssl", "runtime"]
# rustls as server side tls.
rustls = ["xitca-tls/rustls", "runtime"]
# rustls as server side tls.
native-tls = ["xitca-tls/native-tls", "runtime"]
# async runtime feature.
runtime = ["xitca-io/runtime", "tokio"]

# unstable features that are subject to be changed at anytime.
io-uring = ["xitca-io/runtime-uring"]
router = ["xitca-router"]

[dependencies]
xitca-io = { workspace = true }
xitca-service = { workspace = true, features = ["alloc"] }
xitca-unsafe-collection = { workspace = true, features = ["bytes"] }

http = { workspace = true }
http-body-alt = { workspace = true }
httpdate = "1.0"
pin-project-lite = { workspace = true }
tracing = { version = "0.1.40", default-features = false }

# tls support shared
xitca-tls = { workspace = true, optional = true }

# http/1 support
httparse = { version = "1.8", optional = true }
itoa = { version = "1", optional = true }

# http/2 support
fnv = { version = "1.0.7", optional = true }
futures-util = { version = "0.3.17", default-features = false, optional = true }

# http/3 support
h3 = { version = "0.0.8", optional = true }
h3-quinn = { version = "0.0.10", optional = true }

# async runtime support.
tokio = { workspace = true, features = ["rt", "time"], optional = true }

# util service support
xitca-router = { workspace = true, optional = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
socket2 = { version = "0.6.0", features = ["all"] }

[dev-dependencies]
criterion = "0.8"
xitca-server = { workspace = true }

[[bench]]
name = "h1_decode"
harness = false
